[gd_scene load_steps=8 format=2]

[ext_resource path="res://models/enemies/Something.glb" type="PackedScene" id=1]
[ext_resource path="res://materials/light.tres" type="Material" id=2]
[ext_resource path="res://scripts/enemies/Something.gd" type="Script" id=3]
[ext_resource path="res://audio/somethingAttack.wav" type="AudioStream" id=4]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 1, 1.54772, 1 )

[sub_resource type="ArrayMesh" id=3]
resource_name = "Something_Circle001"
surfaces/0 = {
"aabb": AABB( -0.841588, 0, -1, 1.71328, 4, 3.97499 ),
"array_data": PoolByteArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 191, 0, 129, 127, 63, 0, 0, 0, 60, 3, 205, 153, 190, 0, 0, 0, 0, 217, 250, 97, 191, 0, 129, 127, 63, 0, 0, 0, 60, 224, 226, 10, 191, 0, 0, 0, 0, 110, 124, 42, 191, 0, 129, 127, 63, 0, 0, 0, 60, 198, 216, 55, 191, 0, 0, 0, 0, 31, 0, 217, 190, 0, 129, 127, 63, 0, 0, 0, 60, 198, 216, 55, 191, 0, 0, 0, 0, 31, 0, 217, 190, 0, 189, 127, 193, 0, 0, 0, 60, 237, 221, 85, 191, 0, 0, 0, 0, 0, 0, 0, 128, 0, 189, 127, 193, 0, 0, 0, 60, 85, 114, 87, 191, 0, 0, 0, 0, 22, 239, 195, 62, 0, 189, 127, 193, 0, 0, 0, 60, 252, 21, 74, 191, 0, 0, 0, 64, 254, 61, 243, 63, 0, 189, 127, 193, 0, 0, 0, 60, 22, 239, 195, 190, 0, 0, 0, 0, 94, 131, 108, 63, 0, 189, 127, 193, 0, 0, 0, 60, 75, 136, 40, 61, 0, 0, 128, 64, 56, 102, 62, 64, 0, 189, 127, 193, 0, 0, 0, 60, 22, 239, 195, 62, 0, 0, 0, 0, 94, 131, 108, 63, 0, 189, 127, 193, 0, 0, 0, 60, 6, 39, 95, 63, 0, 0, 0, 64, 64, 130, 248, 63, 0, 189, 127, 193, 0, 0, 0, 60, 85, 114, 87, 63, 0, 0, 0, 0, 22, 239, 195, 62, 0, 189, 127, 193, 0, 0, 0, 60, 237, 221, 85, 63, 0, 0, 0, 0, 0, 0, 0, 128, 0, 129, 127, 63, 0, 0, 0, 60, 237, 221, 85, 63, 0, 0, 0, 0, 0, 0, 0, 128, 0, 189, 127, 193, 0, 0, 0, 60, 75, 97, 66, 63, 0, 0, 0, 0, 31, 0, 217, 190, 0, 129, 127, 63, 0, 0, 0, 60, 101, 107, 21, 63, 0, 0, 0, 0, 120, 141, 63, 191, 0, 129, 127, 63, 0, 0, 0, 60, 13, 222, 174, 62, 0, 0, 0, 0, 217, 250, 97, 191, 0, 129, 127, 63, 0, 0, 0, 60, 0, 56, 145, 186, 0, 0, 0, 0, 6, 109, 209, 62, 0, 189, 127, 193, 0, 0, 0, 60, 40, 135, 235, 61, 0, 0, 0, 0, 44, 15, 141, 62, 0, 189, 127, 193, 0, 0, 0, 60, 232, 227, 40, 62, 0, 0, 0, 0, 126, 68, 73, 62, 0, 189, 127, 193, 0, 0, 0, 60, 82, 143, 76, 62, 0, 0, 0, 0, 72, 82, 231, 61, 0, 189, 127, 193, 0, 0, 0, 60, 232, 86, 100, 62, 0, 0, 0, 0, 176, 192, 217, 187, 0, 129, 127, 63, 0, 0, 0, 60, 232, 86, 100, 62, 0, 0, 0, 0, 176, 192, 217, 187, 0, 189, 127, 193, 0, 0, 0, 60, 176, 191, 77, 62, 0, 0, 0, 0, 125, 166, 246, 189, 0, 129, 127, 63, 0, 0, 0, 60, 140, 179, 39, 62, 0, 0, 0, 0, 145, 107, 71, 190, 0, 129, 127, 63, 0, 0, 0, 60, 248, 231, 237, 61, 0, 0, 0, 0, 71, 235, 141, 190, 0, 129, 127, 63, 0, 0, 0, 60, 0, 180, 20, 187, 0, 0, 0, 0, 51, 87, 204, 190, 0, 129, 127, 63, 0, 0, 0, 60, 96, 210, 244, 189, 0, 0, 0, 0, 181, 34, 140, 190, 0, 129, 127, 63, 0, 0, 0, 60, 112, 115, 76, 190, 0, 0, 0, 0, 1, 229, 241, 189, 0, 129, 127, 63, 0, 0, 0, 60, 76, 101, 82, 190, 0, 0, 0, 0, 224, 179, 179, 187, 0, 129, 127, 63, 0, 0, 0, 60, 76, 101, 82, 190, 0, 0, 0, 0, 224, 179, 179, 187, 0, 189, 127, 193, 0, 0, 0, 60, 46, 212, 78, 190, 0, 0, 0, 0, 52, 207, 221, 61, 0, 189, 127, 193, 0, 0, 0, 60, 220, 54, 37, 190, 0, 0, 0, 0, 238, 247, 83, 62, 0, 189, 127, 193, 0, 0, 0, 60, 220, 141, 230, 189, 0, 0, 0, 0, 175, 208, 145, 62, 0, 189, 127, 193, 0, 0, 0, 60 ),
"array_index_data": PoolByteArray( 2, 0, 0, 0, 1, 0, 0, 0, 16, 0, 17, 0, 16, 0, 13, 0, 15, 0, 13, 0, 24, 0, 22, 0, 13, 0, 25, 0, 24, 0, 0, 0, 13, 0, 16, 0, 3, 0, 0, 0, 2, 0, 29, 0, 3, 0, 30, 0, 28, 0, 3, 0, 29, 0, 0, 0, 25, 0, 13, 0, 0, 0, 26, 0, 25, 0, 28, 0, 0, 0, 3, 0, 0, 0, 27, 0, 26, 0, 0, 0, 28, 0, 27, 0, 5, 0, 31, 0, 4, 0, 5, 0, 32, 0, 31, 0, 7, 0, 5, 0, 6, 0, 10, 0, 8, 0, 9, 0, 8, 0, 5, 0, 7, 0, 5, 0, 33, 0, 32, 0, 5, 0, 34, 0, 33, 0, 10, 0, 5, 0, 8, 0, 12, 0, 10, 0, 11, 0, 23, 0, 12, 0, 14, 0, 21, 0, 12, 0, 23, 0, 10, 0, 34, 0, 5, 0, 10, 0, 18, 0, 34, 0, 21, 0, 10, 0, 12, 0, 20, 0, 10, 0, 21, 0, 10, 0, 19, 0, 18, 0, 19, 0, 10, 0, 20, 0 ),
"blend_shape_data": [  ],
"format": 2194711,
"index_count": 93,
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 35
}

[sub_resource type="ArrayMesh" id=2]
resource_name = "Something_Circle002"
surfaces/0 = {
"aabb": AABB( -1, 0, -1, 2, 1e-05, 2 ),
"array_data": PoolByteArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 191, 0, 127, 127, 63, 0, 0, 0, 60, 22, 239, 195, 190, 0, 0, 0, 0, 94, 131, 108, 191, 0, 127, 127, 63, 0, 0, 0, 60, 243, 4, 53, 191, 0, 0, 0, 0, 243, 4, 53, 191, 0, 127, 127, 63, 0, 0, 0, 60, 94, 131, 108, 191, 0, 0, 0, 0, 22, 239, 195, 190, 0, 127, 127, 63, 0, 0, 0, 60, 0, 0, 128, 191, 0, 0, 0, 0, 0, 0, 0, 128, 0, 127, 127, 63, 0, 0, 0, 60, 94, 131, 108, 191, 0, 0, 0, 0, 22, 239, 195, 62, 0, 127, 127, 63, 0, 0, 0, 60, 243, 4, 53, 191, 0, 0, 0, 0, 243, 4, 53, 63, 0, 127, 127, 63, 0, 0, 0, 60, 22, 239, 195, 190, 0, 0, 0, 0, 94, 131, 108, 63, 0, 127, 127, 63, 0, 0, 0, 60, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 63, 0, 127, 127, 63, 0, 0, 0, 60, 22, 239, 195, 62, 0, 0, 0, 0, 94, 131, 108, 63, 0, 127, 127, 63, 0, 0, 0, 60, 243, 4, 53, 63, 0, 0, 0, 0, 243, 4, 53, 63, 0, 127, 127, 63, 0, 0, 0, 60, 94, 131, 108, 63, 0, 0, 0, 0, 22, 239, 195, 62, 0, 127, 127, 63, 0, 0, 0, 60, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 0, 128, 0, 127, 127, 63, 0, 0, 0, 60, 94, 131, 108, 63, 0, 0, 0, 0, 22, 239, 195, 190, 0, 127, 127, 63, 0, 0, 0, 60, 243, 4, 53, 63, 0, 0, 0, 0, 243, 4, 53, 191, 0, 127, 127, 63, 0, 0, 0, 60, 22, 239, 195, 62, 0, 0, 0, 0, 94, 131, 108, 191, 0, 127, 127, 63, 0, 0, 0, 60 ),
"array_index_data": PoolByteArray( 0, 0, 2, 0, 1, 0, 2, 0, 4, 0, 3, 0, 4, 0, 6, 0, 5, 0, 6, 0, 8, 0, 7, 0, 8, 0, 10, 0, 9, 0, 10, 0, 12, 0, 11, 0, 12, 0, 14, 0, 13, 0, 14, 0, 0, 0, 15, 0, 0, 0, 4, 0, 2, 0, 4, 0, 8, 0, 6, 0, 8, 0, 12, 0, 10, 0, 12, 0, 0, 0, 14, 0, 0, 0, 8, 0, 4, 0, 8, 0, 0, 0, 12, 0 ),
"blend_shape_data": [  ],
"format": 2194711,
"index_count": 42,
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 16
}

[node name="Something" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.49221, 0 )
script = ExtResource( 3 )

[node name="Circle001" parent="." index="0"]
visible = false
material/0 = ExtResource( 2 )

[node name="Circle" parent="." index="1"]
visible = false
material/0 = ExtResource( 2 )

[node name="Area" type="Area" parent="." index="2"]
transform = Transform( 0.047222, 0, 0, 0, 0.047222, 0, 0, 0, 0.047222, 0, 2.8847, 0 )
collision_layer = 4
collision_mask = 4

[node name="CollisionShape" type="CollisionShape" parent="Area" index="0"]
transform = Transform( 21.2924, 0, 0, 0, 24.47, 0, 0, 0, 1.0443, 0, -14.8763, 0 )
shape = SubResource( 1 )

[node name="Circle002" type="MeshInstance" parent="." index="3"]
transform = Transform( 1.14768, 0, 0, 0, 0, -1.14768, 0, 0.047222, 0, 0, 2.8847, 0 )
mesh = SubResource( 3 )
material/0 = ExtResource( 2 )

[node name="Circle2" type="MeshInstance" parent="." index="4"]
transform = Transform( 0.107042, 0, 0, 0, -0.0710968, 0, 0, 0, -0.0710968, 0, 2.8847, 0 )
mesh = SubResource( 2 )
skeleton = NodePath("../Circle")
material/0 = ExtResource( 2 )

[node name="shootTimer" type="Timer" parent="." index="5"]
wait_time = 5.0
autostart = true

[node name="shootingPoint" type="Spatial" parent="." index="6"]

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="." index="7"]
stream = ExtResource( 4 )
unit_db = 10.256
unit_size = 3.0

[connection signal="area_entered" from="Area" to="." method="_on_Area_area_entered"]
[connection signal="timeout" from="shootTimer" to="." method="_on_shootTimer_timeout"]
